lost track of whats here...wip code
